--- a/Scientific_Computing/Ardhi_Bagas_Rangga_Wardhana_2702276696_sesi04_newton_raphson.ipynb
+++ b/Scientific_Computing/Ardhi_Bagas_Rangga_Wardhana_2702276696_sesi04_newton_raphson.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9gM45DlEtylOMWwfUQjTr",
+      "authorship_tag": "ABX9TyOOowQE1r9ogyoIi0Iwd0Fv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oqJPeI1J4Mj_",
-        "outputId": "1782ca51-bf22-4aee-c224-ff6b0936c912"
+        "outputId": "38c90459-ef0c-4b6d-deec-d59eb1dbec67"
       },
       "outputs": [
         {
@@ -72,7 +72,7 @@
       "metadata": {
         "id": "H6ueWeiO5FAq"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,9 +87,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "onqroMq25l5Q",
-        "outputId": "8074a265-b65f-446f-9828-d737b14aadbc"
+        "outputId": "fabc97a6-aacb-4783-edf9-e73ea3d8ab57"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,6 +97,163 @@
           "text": [
             "estimate = 1.4142135623746899\n",
             "sqrt(2) = 1.4142135623730951\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Quiz 1 Newton raphson"
+      ],
+      "metadata": {
+        "id": "sO5OWi_zAHAw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "f(x) = x^3 - 3x^2 +2\n",
+        "x0 = 1.5\n",
+        "tol = 0.001"
+      ],
+      "metadata": {
+        "id": "7dshyMihAP0T"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f = lambda x: x**3 - 3*x**2 + 2*x\n",
+        "f_prime = lambda x: 3*x**2 + 6*x + 2\n",
+        "newton_raphson = 1.5 - (f(1.5))/(f_prime(1.5))\n",
+        "\n",
+        "print(\"newton_raphson =\", newton_raphson)\n",
+        "print(\"sqrt(2) =\", np.sqrt(2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C57wW-KWBN_F",
+        "outputId": "96baa211-9782-447a-d7dd-d478a5a54b1e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "newton_raphson = 1.5211267605633803\n",
+            "sqrt(2) = 1.4142135623730951\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "estimate = my_newton(f, f_prime, 1.5, 1e-6)\n",
+        "print(\"estimate =\", estimate)\n",
+        "print(\"sqrt(2) =\", np.sqrt(2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R7LK2cxPExZC",
+        "outputId": "fccefe02-a36f-41f9-bf9d-95ea561cc20c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "estimate = 1.9999995290395693\n",
+            "sqrt(2) = 1.4142135623730951\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Quiz 2 Newton raphson"
+      ],
+      "metadata": {
+        "id": "_GuKAC_nA6tq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "f(x) = e^x - 2x\n",
+        "x0 = 1\n",
+        "tol = 0.001"
+      ],
+      "metadata": {
+        "id": "YPXVxAT6BBfG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f = lambda x: np.exp(x) - 2*x\n",
+        "f_prime = lambda x: np.exp(x) - 2\n",
+        "newton_raphson = 1 - (f(1))/(f_prime(1))\n",
+        "\n",
+        "print(\"newton_raphson =\", newton_raphson)\n",
+        "print(\"sqrt(2) =\", np.sqrt(2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GGF5c_PdBPIm",
+        "outputId": "e441cd64-e8a2-4bd8-e143-234d5a31b349"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "newton_raphson = 0.0\n",
+            "sqrt(2) = 1.4142135623730951\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "estimate = my_newton(f, f_prime, 1, 1e-6)\n",
+        "print(\"estimate =\", estimate)\n",
+        "print(\"sqrt(2) =\", np.sqrt(2))"
+      ],
+      "metadata": {
+        "id": "hp0qWBWw3jU8",
+        "outputId": "259a0ee1-584e-48a7-ef00-c02bb21d9246",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 321
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "RecursionError",
+          "evalue": "maximum recursion depth exceeded",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-29-98f13934ab02>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mestimate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmy_newton\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf_prime\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1e-6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"estimate =\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mestimate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"sqrt(2) =\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-24-d21bf4da30eb>\u001b[0m in \u001b[0;36mmy_newton\u001b[0;34m(f, df, x0, tol)\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mx0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mmy_newton\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx0\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "... last 1 frames repeated, from the frame below ...\n",
+            "\u001b[0;32m<ipython-input-24-d21bf4da30eb>\u001b[0m in \u001b[0;36mmy_newton\u001b[0;34m(f, df, x0, tol)\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mx0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mmy_newton\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx0\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mRecursionError\u001b[0m: maximum recursion depth exceeded"
           ]
         }
       ]
